--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "crypto-js": "^4.1.1",
     "firebase": "^9.9.3",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
