--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
@@ -19,6 +21,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
